kube-manifest/argocd/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
    - host: btc5-argocd.thiraphat.online
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: argocd
                port:
                  number: 443
            path: /
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: argocd
  name: argocd
spec:
  type: ExternalName
  externalName: argo-argocd-server.argocd.svc.cluster.local
